# swu-card-downloader

./: Dockerfile  README.md  main.py
cpp/: CMakeLists.txt  build.sh  run.sh
cpp/src/: steal.cpp
cpp/src/include/: config.hpp  util.cpp  util.hpp
py/: .gitignore  requirements.txt
py/src/: new_tech.py  new_tech_app.py  new_tech_config.py  off-meta.py
src/: main.py  off-meta.py
